# DataForge-Compute

./: CLAUDE.md  package-lock.json  package.json
docs/: svelte-lifecycle-reactivity-guide.md  tauri-state-synchronization-guide.md
docs/context7/: README.md
docs/mcp/context7/: AGENTS.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  local_db.rs  main.rs
src-tauri/src/compute/: context.rs  data_loader.rs  engine.rs  error.rs  mod.rs  output_writer.rs  parameters.rs  registry.rs  types.rs
src-tauri/src/compute/providers/: core.rs  mod.rs  petrophysics.rs
src/lib/: index.ts
src/lib/charts/: chart-manager.ts  correlation-types.ts  downsampling.ts  types.ts
src/lib/components/: ArtifactInspector.svelte  CoverageView.svelte  CurveSelectorDialog.svelte  ExecutionResult.svelte  ParameterForm.svelte  ProvenancePanel.svelte  SimplePlot.svelte  UdfToolbox.svelte
src/lib/components/charts/: ChartInteractionBar.svelte  ChartSettingsDialog.svelte  ChartSettingsToolbar.svelte  ChartToolbar.svelte  CurveChart.svelte  EChartsChart.svelte  LinkedChartsView.svelte  UPlotChart.svelte
src/lib/components/correlation/: CurveTrack.svelte  (+4 more)
src/lib/panes/: chart-configs.ts  drag-drop-context.ts  index.ts  layout-model.ts  pane-factory.ts  selection-context.ts  workspace-manager.ts
src/lib/stores/: chartInteraction.ts  compute.ts  dataStore.ts  events.ts  selection.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/workbench/: +page.svelte
src/routes/workspace/: +page.svelte
(+14 files in other folders)
