[package]
name = "dataforge-compute"
version = "0.1.0"
description = "DataForge Compute - A local-first computation client for DataForge"
authors = ["DataForge Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "dataforge_compute_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# DuckDB for reading curve data from Parquet
duckdb = { version = "1.0", features = ["bundled"] }

# Arrow and Parquet for writing curve data
arrow = "53"
parquet = "53"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# Hashing
sha2 = "0.10"
